# langgraph_tutorial

./: .gitignore  pyproject.toml
terxt2sql_pg/: text2sql.ipynb  text2sql_lg.ipynb
tutorial/: llm_factory.py
tutorial/parallel_workflow/: 2.a.ipynb  2.b.ipynb  2.c.ipynb  Parallel_workflow.md
tutorial/sequential_workflow/: 1.a_seq_workflow.ipynb  1.b_seq_workflow.ipynb  1.c_seq_workflow.ipynb  Sequential_workflow.md
